--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 
 <html>
 <body>
-  <script src="http://h2.flashvortex.com/display.php?id=2_1544013460_37402_305_0_705_53_8_2_47" type="text/javascript"></script>
-
+<!--   <script src="http://h2.flashvortex.com/display.php?id=2_1544013460_37402_305_0_705_53_8_2_47" type="text/javascript"></script>
+ -->
 <!--   <object classid="clsid:D27CDB6E-AE6D-11cf-96B8-444553540000" codebase="http://download.macromedia.com/pub/shockwave/cabs/flash/swflash.cab#version=8,0,0,0" width="705" height="53">
     <param name="movie" value="flashvortex.swf" />
     <param name="quality" value="best" />
@@ -13,7 +13,7 @@
     <embed src="flashvortex.swf" quality="best" menu="true" width="705" height="53" type="application/x-shockwave-flash" pluginspage="http://www.macromedia.com/go/getflashplayer" allowScriptAccess="sameDomain" />
   </object> -->
   
-  <h1>GAY</h1>
+  <h1 style="font-size:1000px">CUIDA DA SUA VIDA</h1>
 </body>
 </html>
     
